--- a/punkt_i_polygon.ipynb
+++ b/punkt_i_polygon.ipynb
@@ -45,16 +45,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4a004dae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"600\"\n",
+       "            src=\"https://haavard-polling.vercel.app/answer/2f9cce7f-511c-4f34-ae7d-2a30d54cc6c9\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fe33c44c450>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import IFrame\n",
     "\n",
-    "## SPØRSMÅL om bakgrunnsferdigheter\n",
-    "\n",
-    "IFrame(\"https://haavard-polling.vercel.app/answer/0844ed85-0656-4ee0-9d2c-b044bb0a5119\", width=900, height=500)"
+    "IFrame(\"https://haavard-polling.vercel.app/answer/2f9cce7f-511c-4f34-ae7d-2a30d54cc6c9\", width=800, height=600)"
    ]
   },
   {
@@ -268,19 +289,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d47d41e1",
+   "execution_count": 5,
+   "id": "15d9f52a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"600\"\n",
+       "            src=\"https://haavard-polling.vercel.app/answer/6f7c729c-8d6c-4900-92ee-5fea665cbb80\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fe33c267310>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"\"\" \"Hvilken av følgende oppgaver kan løses ved hjelp av en punkt-i-polygon-analyse?\"\n",
+    "from IPython.display import IFrame\n",
     "\n",
-    "Alternativer:\n",
-    "\n",
-    "Identifisere hvilke tweets som ble postet inne i en park. ✅\n",
-    "Beregne den korteste avstanden mellom to punkter.\n",
-    "Sjekke om to polygoner overlapper.\n",
-    "Finne arealet av et polygon.\"\"\""
+    "IFrame(\"https://haavard-polling.vercel.app/answer/6f7c729c-8d6c-4900-92ee-5fea665cbb80\", width=800, height=600)"
    ]
   },
   {
@@ -515,18 +554,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5a07a170",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"400\"\n",
+       "            src=\"https://haavard-polling.vercel.app/answer/49050882-15bb-4de1-9f93-8b91ac222f66\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fe33c440950>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"\"\"Kommer du til å ta GMGI221?\"\"\""
+    "IFrame(\"https://haavard-polling.vercel.app/answer/49050882-15bb-4de1-9f93-8b91ac222f66\", width=800, height=400)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea7ac248",
+   "metadata": {},
+   "source": [
+    "<div style=\"border: 1px solid #ccc; padding: 10px; border-radius: 5px; background-color:rgb(177, 226, 250); color:#000;\">\n",
+    "<strong>Spørsmål:</strong><br>\n",
+    "Kjør cellen under for å svare på spørsmålet:\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2290ce6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"400\"\n",
+       "            src=\"https://haavard-polling.vercel.app/answer/9ea93c6a-6287-46cf-ba19-09159c40001a\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fe33c443ad0>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://haavard-polling.vercel.app/answer/9ea93c6a-6287-46cf-ba19-09159c40001a\", width=800, height=400)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -540,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
